# document-clustering-topic-modeling

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  main.py  pyproject.toml  requirements.txt  utils.py  verify_completion.py
.github/workflows/: ci_cd.yml
app/: streamlit_app.py
data/sample/: sample_00.txt  sample_01.txt  sample_02.txt  sample_03.txt  sample_04.txt  sample_05.txt  sample_06.txt  sample_07.txt  sample_08.txt  sample_09.txt  sample_10.txt  sample_11.txt  sample_12.txt  sample_13.txt  sample_14.txt  sample_15.txt  sample_16.txt  sample_17.txt  sample_18.txt  sample_19.txt  sample_20.txt  sample_21.txt  sample_22.txt  sample_23.txt  sample_24.txt  sample_25.txt  sample_26.txt  sample_27.txt  sample_28.txt  sample_29.txt  sample_30.txt  sample_31.txt  sample_32.txt  sample_33.txt  sample_34.txt  sample_35.txt  sample_36.txt  sample_37.txt  sample_38.txt  sample_39.txt
scripts/: download_data.py  evaluate.py  generate_final_pdf.py  predict.py  train.py
src/: __init__.py  config.py  logger.py  schema.py
src/data/: __init__.py  loader.py
src/evaluation/: metrics.py
src/explainability/: explainer.py
src/features/: vectorizer.py
src/models/: clustering.py  topic_modeling.py
src/pipeline/: orchestrator.py
src/preprocessing/: text_processor.py
src/utils/: __init__.py  artifacts.py  nltk_utils.py
src/visualization/: plots.py
tests/: conftest.py  test_data_loader.py  test_pipeline.py  test_preprocessing.py  test_vectorizer.py
