[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "doc-clustering-topic-modeling"
version = "1.0.0"
description = "A production-ready unsupervised NLP pipeline for clustering documents and extracting interpretable themes"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [{ name = "ML Engineer" }]
keywords = ["nlp", "clustering", "topic-modeling", "machine-learning", "lda", "kmeans"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing",
]

dependencies = [
    "pydantic>=2.0",
    "numpy>=1.20",
    "scipy>=1.7",
    "scikit-learn>=1.0",
    "pandas>=1.3",
    "nltk>=3.6",
    "spacy>=3.0",
    "matplotlib>=3.3",
    "seaborn>=0.11",
    "streamlit>=1.0",
    "joblib>=1.0",
]

[project.optional-dependencies]
dev = ["pytest>=6.0", "pytest-cov", "ruff", "black"]
all = ["streamlit", "plotly"]

[project.urls]
Homepage = "https://github.com/yourusername/document-clustering-topic-modeling"
Documentation = "https://github.com/yourusername/document-clustering-topic-modeling"
Repository = "https://github.com/yourusername/document-clustering-topic-modeling.git"

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310']
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.ruff]
line-length = 100
select = ["E", "F", "W", "I"]
ignore = ["E501"]  # Line too long

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
